Fix spacing values in items and text

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -16,15 +16,21 @@ img {
 .fruit{
   display: flex;
   justify-content: center;
+  gap: 52px;
 }
 
 .fruit-block{
   width: 200px;
 }
 
+.fruit-block .text{
+  text-align: center;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
